# hypen-argocd-mcp

./: .gitignore  .mcp.json  AGENT.md  Cargo.toml  EXAMPLE_USAGE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  argocd_mcp_server.py  get_manifests_test_report.txt  install.sh  pod_logs_test_report.txt  pyproject.toml  test_report.txt
docs/: EXAMPLE_USAGE.md  SERVER_SIDE_DIFF.md  TEST_COVERAGE.md  get_application_history.md  get_application_implementation_report.md  get_resource.md  list_resource_events.md  patch_resource.md  pod_logs.md  refresh_application.md  rollback_application.md  sync_application.md
src/: argocd_client.rs  lib.rs  main.rs  models.rs  tools.rs
tests/: events_test.rs  get_application_history_test.rs  get_manifests_test.rs  get_resource_test.rs  integration_test.rs  patch_resource_test.rs  readonly_test.rs  refresh_application_test.rs  rollback_test.rs  sync_test.rs
