[package]
name = "argocd-mcp-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "argocd_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "argocd-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["macros", "server", "transport-io"] }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk.git" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
serial_test = "3"
