[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argocd-mcp-server"
version = "0.1.0"
description = "ArgoCD MCP Server - A robust Model Context Protocol server for ArgoCD, built with Rust"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["argocd", "mcp", "model-context-protocol", "ai", "llm", "claude", "kubernetes", "gitops"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.scripts]
argocd-mcp-server = "argocd_mcp_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/argocd-mcp-server"
Repository = "https://github.com/yourusername/argocd-mcp-server.git"
